--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 :root {
     --color-accent: #128C15;
     --color-accent-hover: #C5DEC5;
-    --color-secondary: #2A5DA3;
+    --color-secondary: #41414F;
 
     --border-radius: 12px;
     --box-shadow: 0 6px 10px -3px rgba(0,0,0,.27);
