--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,7 +102,7 @@ a {
     max-width: 1500px;
     height: 85px;
     pointer-events: initial;
-    background-color: #D9D9D9;
+    background-color: #f9f9f9;
     border-radius: var(--border-radius);
     box-shadow: var(--box-shadow);
     transition: 300ms background-color;
