--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -272,7 +272,7 @@ a {
     border-radius: 40px;
     box-sizing: border-box;
     padding: 30px;
-    background: #E6E6E6;
+    background: #f9f9f9;
 }
 
 #echargeMain #summary #banner {
