--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,6 +59,8 @@ a {
     box-sizing: border-box;
     padding-left: 30px;
     display: flex;
+    border-top-left-radius: 50px;
+    border-bottom-left-radius: 50px;
 
 }
 
