--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 :root {
-    --color-accent: #128C15;
+    --color-accent: ##73B719;
     --color-accent-hover: #C5DEC5;
     --color-secondary: #41414F;
 
