--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -89,7 +89,7 @@ a {
     position: relative;
     width: 100%;
     height: calc(100% - 60px - 40px);
-    background-color: white;
+    background-color: F6F6F6;
     background-image: #f9f9f9;
     background-size: cover;
     display: flex;
