--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 :root {
     --color-accent: #73B719;
-    --color-accent-hover: #C5DEC5;
+    --color-accent-hover: #D5EFB4;
     --color-secondary: #41414F;
 
     --border-radius: 0px;
