--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 :root {
     --color-accent: #73B719;
     --color-accent-hover: #D5EFB4;
-    --color-secondary: #41414F;
+    --color-secondary: #020931;
 
     --border-radius: 0px;
 }
