--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -193,7 +193,7 @@ a {
 
 /* Select options -> Search button */
 #echargeMain #configurator #select #echargeSearch.option {
-    width: 80px;
+    width: 80px!important;
     margin-left: auto;
     padding-right: 0;
     background-color: #CECECE;
