--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -194,6 +194,7 @@ a {
 /* Select options -> Search button */
 #echargeMain #configurator #select #echargeSearch.option {
     width: 130px;
+    min-width: 100px;
     margin-left: auto;
     padding-right: 0;
     background-color: #CECECE;
