--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -76,6 +76,8 @@ a {
     overflow: hidden;
     text-overflow: ellipsis;
     font: normal normal bold 16px/20px Nexa;
+    letter-spacing: 0px;
+    opacity: 1;
 }
 
 #echargeHeader #echargeLogo {
